[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CellStrata"
version = "0.1.0"
description = "Single-cell RNA-seq data acquisition, visualization, and mast cell stratification toolkit"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Crizza"}]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "cellxgene-census>=1.0.0",
    "scanpy>=1.9.0",
    "anndata>=0.9.0",
    "tiledbsoma>=1.5.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
notebook = [
    "jupyterlab>=4.0",
    "ipywidgets",
]

[project.scripts]
cellstrata-query = "CellStrata.census_query._runner:main"

[tool.setuptools.packages.find]
include = ["CellStrata*"]

[tool.pytest.ini_options]
testpaths = ["CellStrata/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (require network access)",
]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
